[project]
name = "langgraph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "ipython>=9.10.0",
    "langchain>=1.2.10",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.10",
    "pillow>=12.1.1",
    "pydot>=4.0.1",
    "pymupdf>=1.27.1",
    "rich>=14.3.3",
    "tiktoken>=0.12.0",
    "unstructured>=0.21.5",
]
